# ResearchPilot

./: .env.sample  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml  申报书.md
doc/: 求是学术（大创）申报书.md
src/research_pilot/: graph.py  state.py
